--- a/src/views/index.html
+++ b/src/views/index.html
@@ -118,6 +118,7 @@
                 gap: 1rem;
                 height: auto;
                 padding: 0 1rem; /* Adjusted padding for smaller screens */
+                width: auto;
             }
 
             .marketplace {
