--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,27 +15,26 @@
             --text-color: #ffffff;
         }
 
+        html {
+            height: 100%;
+        }
+
         body {
             font-family: 'Montserrat', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+            height: 100%;
+            padding-bottom: 30px;
             text-align: center;
             color: var(--text-color);
             position: relative;
-            overflow: hidden;
             background: url('/assets/stadium_background.jpg') no-repeat center center/cover;
         }
 
         /* Full-Width Fixed Header */
         .top-header {
-            position: fixed;
-            top: 0;
-            left: 0;
             width: 100%;
             padding: 1rem 0;
             background-color: rgba(0, 0, 0, 0.1);
@@ -61,8 +60,6 @@
             display: flex;
             justify-content: center;
             gap: 2rem;
-            width: 100%;
-            max-width: 1200px;
             height: 400px;
             padding: 0 2rem; /* Added padding for space around boxes */
         }
