--- a/src/views/index.html
+++ b/src/views/index.html
@@ -100,6 +100,11 @@
 
         /* Mobile Styles */
         @media (max-width: 768px) {
+
+            body {
+                padding: 0;
+            }
+            
             .main-title {
                 font-size: 2rem;
                 margin: 4rem 0 1rem;
