--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,9 +15,6 @@
             --text-color: #ffffff;
         }
 
-        html {
-            height: 100%;
-        }
 
         body {
             font-family: 'Montserrat', sans-serif;
@@ -101,10 +98,6 @@
         /* Mobile Styles */
         @media (max-width: 768px) {
 
-            body {
-                padding: 0;
-            }
-
             .main-title {
                 font-size: 2rem;
                 margin: 4rem 0 1rem;
@@ -153,7 +146,7 @@
             <!-- Left Side -->
             <div class="marketplace left">
                 <a href="https://betting.contentarena.com" class="marketplace-link">
-                    <h2>Betting Rights</h2>
+                    <h2>Audiovisual Betting Rights</h2>
                     <p>Transparent and flexible, match-by-match, market-by-market</p>
                 </a>
             </div>
@@ -161,7 +154,7 @@
             <!-- Right Side -->
             <div class="marketplace right">
                 <a href="https://media.contentarena.com" class="marketplace-link">
-                    <h2>Media Rights</h2>
+                    <h2>Broadcast Media Rights</h2>
                     <p>Easy global access & effortless transactions</p>
                 </a>
             </div>
